--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,18 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
     "axios": "^1.4.0",
     "formik": "^2.4.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-easy-edit": "^1.16.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "styled-components": "^5.3.11",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
