--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     name: close
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
