--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     name: close
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
@@ -41,16 +41,14 @@ spring:
     max-in-memory-size: 10MB
 
   mail:
-    host: localhost
-    port: 1025
-    username: hello
-    password: hello
+    host: smtp.gmail.com
+    port: 587
+    username: withloveclose.co@gmail.com
+    password: zhfy rqsh hfmy rtcw
 
     properties:
       mail:
         smtp:
-          ssl:
-            trust: "*"
           auth: true
           starttls:
             enable: true
