--- a/server/pom.xml
+++ b/server/pom.xml
@@ -90,6 +90,10 @@
 			<artifactId>s3</artifactId>
 			<version>2.20.26</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
