removed, unusued field updated to profile use - included ping controller for aws

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -3,37 +3,36 @@ rsa:
   public-key: classpath:certs/public.pem
 
 server:
-  port: 5000
+  port: 8080
   error:
     include-message: always
     include-binding-errors: always
 
 aws:
-  region: us-east-1
+  region: us-east-2
   s3:
     buckets:
-      user: close-web-v1
+      user: close-app-v1
 
 spring:
-#  h2:
-#    console:
-#      enabled: true
+#  profiles:
+#    active: @spring.profiles.active@
+  h2:
+    console:
+      enabled: true
   datasource:
-#    username: closeco
-#    password: Stayahead33
-#    url: jdbc:postgresql://close-web-v1-db.c67jtqiye14y.us-east-1.rds.amazonaws.com:5432/closewebdb
     username: sadu
     password: jujuotb
     url: jdbc:postgresql://localhost:5432/close_db
     generate-unique-name: false
     name: close
   jpa:
-#    hibernate:
-#      ddl-auto: create
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.PostgreSQLDialect
-#        format_sql: true
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
     show-sql: true
   main:
     web-application-type: servlet
