controlled async requests to redux update, chnaged favicon" "

--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,18 +3,18 @@
   "name": "Close App",
   "icons": [
     {
-      "src": "close_temp.jpg",
+      "src": "./favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
     {
-      "src": "close_temp.jpg",
-      "type": "image/png",
+      "src": "./favicon.ico",
+      "type": "image/jpg",
       "sizes": "192x192"
     },
     {
-      "src": "close_temp.jpg",
-      "type": "image/png",
+      "src": "./favicon.ico",
+      "type": "image/jpg",
       "sizes": "512x512"
     }
   ],
