--- a/server/pom.xml
+++ b/server/pom.xml
@@ -123,6 +123,14 @@
 				</spring.profiles.active>
 			</properties>
 		</profile>
+		<profile>
+			<id>dev</id>
+			<properties>
+				<spring.profiles.active>
+					dev
+				</spring.profiles.active>
+			</properties>
+		</profile>
 	</profiles>
 
 </project>
